--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <div id="nav-links"
-                    class="flex md:h-[100%] md:w-[50%] sm:hidden sm:absolute sm:h-[100vh] sm:w-[100vw] sm:bg-white md:bg-transparent sm:top-[0px] md:static sm:items-center">
+                    class="md:flex md:h-[100%] md:w-[50%] sm:hidden sm:absolute sm:h-[100vh] sm:w-[100vw] sm:bg-white md:bg-transparent sm:top-[0px] md:static sm:items-center">
 
                     <ul class="flex  w-[100%] justify-between md:flex-row sm:flex-col  sm:h-[80%] sm:items-center ">
                         <li id="prodoc" class=" font-[500]"><a href="">Product</a></li>
